# libbfi

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README  README.md  melange.yaml
.github/workflows/: build_nix.yml  nix-build.yml  release.yml
sample/: hi.bf  hi.ook  ook_world.ook
src/: bf_interpreter.rs  builtin_tokenizers.rs  interpreter.rs  lib.rs  main.rs  matching.rs  parser.rs  runtime.rs  token.rs
src/builtin/: bf_runtime.rs  trivial_tokenizers.rs
src/interpreter/: bf.rs  bf_features.rs  generic_dialect.rs  languages.rs  macros.rs  ook.rs  std_bf.rs
src/languages/: builtin.rs  custom.rs
src/macros/: token_conversion.rs  token_gen.rs
src/util/: matching.rs
tests/: tests.rs
