[package]
name = "libbfi"
version = "2.0.0"
edition = "2021"
description = "Extendable brainfuck interpreter library"
license = "BSD-3-Clause"
keywords = [ "extendable" , "brainfuck" , "interpreter" , "library"]
categories = ["simulation"]
authors = ["Tulili <tulilirockz.pub@gmail.com>"]
docs = "https://docs.rs/libbfi"
homepage = "https://github.com/tulilirockz/libbfi"
