[package]
name = "libbfi"
version = "6.0.1"
edition = "2021"
description = "Extendable brainfuck interpreter library"
license = "BSD-3-Clause"
keywords = [ "extendable" , "brainfuck" , "interpreter" , "library"]
categories = ["simulation"]
authors = ["Tulili <tulilirockz.pub@gmail.com>"]
homepage = "https://github.com/tulilirockz/libbfi"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
paste = "1.0.14"
